[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Sprites/hunter_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/Hunter.gd" type="Script" id=2]
[ext_resource path="res://src/Sprites/blood_peasant.png" type="Texture" id=3]
[ext_resource path="res://src/Scenes/BloodSplat.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Sprites/blood_peasant2.png" type="Texture" id=5]
[ext_resource path="res://src/Sprites/blood_peasant3.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 22.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.5, 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Character/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0, 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Hunter" type="Area2D"]
collision_layer = 20
collision_mask = 20
monitoring = false
script = ExtResource( 2 )
minSpeed = 30.0
maxSpeed = 50.0
skins = [ ExtResource( 1 ) ]
decals = [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ) ]
character = NodePath("Character")
skin = NodePath("Character/Sprite")
decal = NodePath("Character/Sprite/BloodDecal")
bloodFX = NodePath("Character/BloodSplat")

[node name="Character" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Character"]
position = Vector2( -1, -2 )
texture = ExtResource( 1 )
hframes = 2

[node name="BloodDecal" type="Sprite" parent="Character/Sprite"]
position = Vector2( 0, -4.5 )
texture = ExtResource( 3 )

[node name="BloodSplat" parent="Character" instance=ExtResource( 4 )]
position = Vector2( 0, -9 )

[node name="AttackArea" type="Area2D" parent="Character"]
collision_layer = 8
collision_mask = 8
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/AttackArea"]
position = Vector2( 6.5, -5 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/death = SubResource( 6 )
anims/default = SubResource( 4 )

[node name="PoolTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="PoolTimer" to="." method="_on_PoolTimer_timeout"]
